# people_also_ask

./: .gitignore  pyproject.toml
people_also_ask/: google.py  orthopedic_data_collector.py  parser.py
people_also_ask/plugins/article_generator/: article_generators.py
