[tool.poetry]
name = "people-also-ask"
version = "0.1.0"
description = ""
authors = ["Kevin Yang"]
readme = "README.md"
packages = [{include = "people_also_ask"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
